--- a/api/api-internal-pipeline-structure-v1/build.gradle
+++ b/api/api-internal-pipeline-structure-v1/build.gradle
@@ -14,7 +14,9 @@
  * limitations under the License.
  */
 
-apply plugin: 'groovy'
+plugins {
+  id 'groovy'
+}
 
 dependencies {
   implementation project(':api:api-base')
