--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -14,8 +14,11 @@
  * limitations under the License.
  */
 
+plugins {
+  id 'groovy'
+}
+
 apply from: '../dependencies.gradle'
-apply plugin: "groovy"
 
 repositories {
   mavenCentral()
