--- a/plugin-infra/go-plugin-api-internal/build.gradle
+++ b/plugin-infra/go-plugin-api-internal/build.gradle
@@ -13,7 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'maven-publish'
+
+plugins {
+  id 'maven-publish'
+}
 
 description = 'Internal interfaces for GoCD Plugins'
 
