--- a/plugin-infra/go-plugin-api/build.gradle
+++ b/plugin-infra/go-plugin-api/build.gradle
@@ -14,7 +14,9 @@
  * limitations under the License.
  */
 
-apply plugin: 'maven-publish'
+plugins {
+  id 'maven-publish'
+}
 
 description = 'Interfaces necessary for GoCD to access plugins'
 
