--- a/spark/spark-spa/build.gradle
+++ b/spark/spark-spa/build.gradle
@@ -14,7 +14,10 @@
  * limitations under the License.
  */
 
-apply plugin: 'groovy'
+plugins {
+  id 'groovy'
+}
+
 dependencies {
   implementation project(':spark:spark-base')
 
