Support building aarch64 docker images locally on Apple Silicom/arm64/aarch4 machines
1) Includes only necessary wrapper architectures required for agent images for clarity (matches current server semantics)
2) Adds support during docker build of images to use the correct architecture for tini & downloaded JRE
2) Defaults Gradle docker builds to the user/environment's local architecture.

This is backwards compatible with the current build process so does not change the released/built architectures of images.
- If you are running on Apple Silicon it will build native images by default which can be much more quickly tested and sanity checked locally
- For images which are not supported on your local arch, will fail fast (e.g Alpine images on arm64 don't work currently due to needing glibc compiled for aarch64)
- Can pass -PdockerBuildIgnoreLocalArch to build for GoCD's preferred/released arch (always x64 right now)

--- a/installers/generic.gradle
+++ b/installers/generic.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 
+import com.thoughtworks.go.build.Architecture
 import com.thoughtworks.go.build.InstallerMetadataTask
 import com.thoughtworks.go.build.InstallerType
 import org.apache.tools.ant.filters.ConcatFilter
@@ -242,7 +243,7 @@ def configureGenericZip(Zip zipTask, InstallerType installerType) {
   }
 
   zipTask.finalizedBy(project.tasks.create("${zipTask.name}Metadata", InstallerMetadataTask.class) {
-    architecture = com.thoughtworks.go.build.Architecture.all
+    architecture = Architecture.all
     packageTask = zipTask
     type = installerType
   })
