Build most linux container images as multi-arch including arm64
- Alpine is excluded for now, due to issues with Tanuki wrapper requiring glibc to work on Alpine, and alpine-glibc packages not being available.
- Requires docker buildx plugin to be installed (cleaner errors if not available would probably be useful)
- Built tarballs for all images are changed to OCI format/layout. Since layers are already gzipped here, we remove the additional gzipping which adds little value but adds complexity
- Archived tarballs cannot be directly docker loaded as docker load only understands its native format. Needs a tool like regclient/regctl to export as docker format for docker load so this logic needs incorporation into later steps (functional tests, code signing and docker hub push)
- Currently, only the native build platform image is sanity-checked by starting it now when building multiple archs. Starting cross-platform via emulation seems unreliable most of the time - at least locally.

--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -22,4 +22,20 @@ subprojects {
   apply plugin: 'base'
 }
 
+tasks.register('initializeBuildx') {
+  doFirst {
+    // Need to do once before everything (not in parallel) see https://github.com/docker/buildx/issues/344
+    def builderName = 'gocd-builder'
+    logger.lifecycle("Initializing docker buildx builder [$builderName]...")
+
+    project.exec { commandLine = ['docker', 'buildx', 'version'] }
+    project.exec {
+      commandLine = ['docker', 'buildx', 'rm', '--force', '--keep-state', builderName]
+      ignoreExitValue = true
+    }
+    project.exec { commandLine = ['docker', 'buildx', 'create', '--use', '--name', builderName] }
+    project.exec { commandLine = ['docker', 'buildx', 'inspect', '--bootstrap', builderName] }
+  }
+}
+
 assemble.dependsOn(subprojects.tasks*.getByName('assemble'))
