Allow more time when emulated, and clean-up dangling containers
- Allows more time when testing images emulated. Unfortunately sometimes they still get stuck with colima/QEMU so need to wait for improvements there. :-(
- Improves logging of what it is doing, so you know it is sleeping.
- Aligns server order of testing with agent

--- a/docker/gocd-agent/build.gradle
+++ b/docker/gocd-agent/build.gradle
@@ -101,10 +101,19 @@ subprojects {
       }
     }
 
-    task.verifyHelper = {
-      // test image
+    // test image
+    task.verifyHelper = { boolean isNative ->
+      def cleanContainer = {     // remove the container
+        project.exec {
+          workingDir = project.rootProject.projectDir
+          commandLine = ["docker", "rm", "--force", docker.dockerImageName]
+          standardOutput = System.out
+          errorOutput = System.err
+        }
+      }
 
       // daemonize the container
+      cleanContainer.call() // Clean-up after any previous aborted runs
       project.exec {
         workingDir = project.rootProject.projectDir
         commandLine = ["docker", "run", "-e", "GO_SERVER_URL=http://localhost:8153/go", "-d", "--name", docker.dockerImageName, docker.imageNameWithTag]
@@ -112,7 +121,11 @@ subprojects {
         errorOutput = System.err
       }
 
-      Thread.sleep(5000)
+      // Need to wait for start. Would be better to have some polling mechanism here with a timeout.
+      def sleep = isNative ? 5000 : 10000
+      logger.lifecycle("\nWaiting ${sleep}ms for ${isNative ? 'native' : 'emulated'} agent container to start...")
+      Thread.sleep(sleep)
+      logger.lifecycle("Should be started now...")
 
       // run a `ps aux`
       ByteArrayOutputStream psOutput = new ByteArrayOutputStream()
@@ -134,12 +147,7 @@ subprojects {
       }
 
       // remove the container
-      project.exec {
-        workingDir = project.rootProject.projectDir
-        commandLine = ["docker", "rm", "--force", docker.dockerImageName]
-        standardOutput = System.out
-        errorOutput = System.err
-      }
+      cleanContainer.call()
 
       // assert if process was running
       def expectedProcess = "lib/agent-bootstrapper.jar -serverUrl http://localhost:8153/go"
