Fix accidental deletion of API versions 10/11 while deleting 1

--- a/build.gradle
+++ b/build.gradle
@@ -934,7 +934,7 @@ task removeApi {
     file('settings.gradle').withWriter { out ->
       def newContents = settingsFileContents
         .stream()
-        .filter({ eachLine -> !eachLine.contains("api:${newProjectName}") })
+        .filter({ eachLine -> !eachLine.contains("':api:${newProjectName}'") })
         .collect(Collectors.joining("\n"))
         .trim() + "\n"
       out.println(newContents)
