Fix expectations on transitive dependency versions for Jakarta/Angus

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -782,8 +782,8 @@ task verifyWar(type: VerifyJarTask) {
         "activemq-broker-${project.versions.activeMQ}.jar",
         "activemq-client-${project.versions.activeMQ}.jar",
         "activemq-openwire-legacy-${project.versions.activeMQ}.jar",
-        "angus-activation-1.0.0.jar",
-        "angus-core-1.0.0.jar",
+        "angus-activation-${project.versions.mailSmtp}.jar",
+        "angus-core-${project.versions.mailSmtp}.jar",
         "animal-sniffer-annotations-1.9.jar",
         "ant-${project.versions.apacheAnt}.jar",
         "antlr-2.7.6.jar",
@@ -842,7 +842,7 @@ task verifyWar(type: VerifyJarTask) {
         "jackson-annotations-${project.versions.jacksonBom}.jar",
         "jackson-core-${project.versions.jacksonBom}.jar",
         "jackson-databind-${project.versions.jacksonBom}.jar",
-        "jakarta.activation-api-2.1.0.jar",
+        "jakarta.activation-api-2.1.1.jar",
         "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
         "jakarta.mail-api-${project.versions.mail}.jar",
         "jakarta.servlet-api-${project.versions.servletApi}.jar",
