--- a/base/build.gradle
+++ b/base/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
+  testImplementation project.deps.systemStubs
   testImplementation project.deps.hamcrest
   testImplementation project.deps.mockitoCore
   testImplementation project.deps.assertJ
