Replace old Python-based hacks to get operating system family with Oshi library
Replace with much more modern library which we can also use for other purposes, with much
better cross-platform support, and without relying on bizarre process forking to determine
details.

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -72,6 +72,7 @@ dependencies {
   implementation project.deps.jakartaAnnotation
   implementation project.deps.commonsConfiguration
   implementation project.deps.nanohttpd
+  implementation project.deps.oshi
 
   testImplementation project(path: ':common', configuration: 'testOutput')
   testImplementation project(path: ':config:config-api', configuration: 'testOutput')
@@ -176,6 +177,8 @@ task verifyJar(type: VerifyJarTask) {
       "jcl-over-slf4j-${project.versions.slf4j}.jar",
       "jcommander-${project.versions.jcommander}.jar",
       "jdom2-${project.versions.jdom}.jar",
+      "jna-jpms-5.12.1.jar",
+      "jna-platform-jpms-5.12.1.jar",
       "joda-time-${project.versions.jodaTime}.jar",
       "jolt-core-${project.versions.jolt}.jar",
       "json-utils-${project.versions.jolt}.jar",
@@ -186,6 +189,7 @@ task verifyJar(type: VerifyJarTask) {
       "nanohttpd-${project.versions.nanohttpd}.jar",
       "objenesis-${project.versions.objenesis}.jar",
       "org.apache.felix.framework-${project.versions.felix}.jar",
+      "oshi-core-java11-${project.versions.oshi}.jar",
       "plugin-metadata-store-${project.version}.jar",
       "quartz-${project.versions.quartz}.jar",
       "semantic-version-${project.versions.semanticVersion}.jar",
