--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -85,6 +85,7 @@ final Map<String, String> libraries = [
   nanohttpd           : 'org.nanohttpd:nanohttpd:2.3.1',
   objenesis           : 'org.objenesis:objenesis:3.3',
   oscache             : 'opensymphony:oscache:2.4.1',
+  oshi                : 'com.github.oshi:oshi-core-java11:6.4.0',
   postgresql          : 'org.postgresql:postgresql:42.5.1',
   quartz              : 'org.quartz-scheduler:quartz:2.3.2',
   rack                : 'org.jruby.rack:jruby-rack:1.1.22',
@@ -154,6 +155,7 @@ final Map<String, String> v = [
   nanohttpd           : versionOf(libraries.nanohttpd),
   objenesis           : versionOf(libraries.objenesis),
   oscache             : versionOf(libraries.oscache),
+  oshi                : versionOf(libraries.oshi),
   postgresql          : versionOf(libraries.postgresql),
   quartz              : versionOf(libraries.quartz),
   rack                : versionOf(libraries.rack),
