Remove unnecessary use of Commons Codec
Moves logic depending on Commons Codec around to the places they are actually used, rather than
dumping everything into "base" module and causing the dependency to propagate everywhere, despite
not really being necessary.

--- a/plugin-infra/go-plugin-access/build.gradle
+++ b/plugin-infra/go-plugin-access/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   api project.deps.jolt
   api project.deps.joltJsonUtils
   api project.deps.commonsCollections4
+  implementation project.deps.commonsCodec
   implementation project.deps.gson
   implementation project.deps.springContext
   testImplementation localGroovy()
