--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     transitive = false
   }
   implementation project.deps.jakartaAnnotation
+  implementation project.deps.commonsCodec
   implementation project.deps.commonsCollections4
   implementation project.deps.commonsText
   implementation project.deps.cloning
