--- a/config/config-api/build.gradle
+++ b/config/config-api/build.gradle
@@ -35,7 +35,7 @@ dependencies {
   api project.deps.jdom
   implementation project.deps.slf4j
   implementation project.deps.felix
-  api project.deps.guava
+  implementation project.deps.guava
   implementation project.deps.jodaTime
   providedAtPackageTime project.deps.bouncyCastle
   annotationProcessor project.deps.lombok
