--- a/spark/spark-base/build.gradle
+++ b/spark/spark-base/build.gradle
@@ -27,6 +27,7 @@ dependencies {
   implementation project.deps.jacksonCore
   implementation project.deps.jacksonDatabind
   implementation project.deps.springWeb
+  implementation project.deps.guava
 
   api(project.deps.spark) {
     transitive = false
