--- a/spark/spark-spa/build.gradle
+++ b/spark/spark-spa/build.gradle
@@ -22,6 +22,7 @@ dependencies {
   implementation project(':spark:spark-base')
 
   implementation project.deps.freemarker
+  implementation project.deps.guava
 
   testCompileOnly project.deps.ehcache
   testImplementation project(path: ':spark:spark-base', configuration: 'testOutput')
