Rationalise @TestOnly usage, replacing deprecations
Most of these are intended for test usage, not to be removed. Better to use these
annotations to distinguish between code we want to remove.

--- a/plugin-infra/go-plugin-access/build.gradle
+++ b/plugin-infra/go-plugin-access/build.gradle
@@ -36,6 +36,8 @@ dependencies {
   implementation project.deps.commonsCodec
   implementation project.deps.gson
   implementation project.deps.springContext
+  compileOnly project.deps.jetBrainsAnnotations
+
   testImplementation localGroovy()
   testImplementation project.deps.jsonUnit
   testImplementation project(':test:test-utils')
