--- a/base/build.gradle
+++ b/base/build.gradle
@@ -30,6 +30,8 @@ dependencies {
   api project.deps.slf4jJcl
   api project.deps.logback
 
+  compileOnly project.deps.jetBrainsAnnotations
+
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
   testImplementation project.deps.systemStubs
