Minor code tidy-up to email sending logic

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -291,7 +291,7 @@ dependencies {
   implementation project.deps.freemarker
   implementation project.deps.guava
   implementation project.deps.jakartaMail
-  implementation project.deps.angusMailSmtp
+  runtimeOnly project.deps.angusMailSmtp
 
   implementation project.deps.slf4j
   implementation(project.deps.jgitServer) {
