--- a/agent/src/main/resources/agent.properties
+++ b/agent/src/main/resources/agent.properties
@@ -20,3 +20,4 @@ agent.ping.interval=5000
 agent.ping.delay=1500
 agent.get.work.interval=10000
 agent.get.work.delay=1000
+agent.get.work.backOffMultiplier=1.5
