Prevent early upgrade of commons-io

--- a/build-platform/build.gradle
+++ b/build-platform/build.gradle
@@ -19,7 +19,12 @@ dependencies {
   constraints {
     api project.deps.angusActivation
     api project.deps.commonsCodec
-    api project.deps.commonsIO
+    api('commons-io:commons-io') {
+      version {
+        // Prevent early upgrade from transitive dependencies (e.g. commons-fileupload)
+        strictly(project.versions.commonsIO as String)
+      }
+    }
     api project.deps.commonsPool
     api project.deps.commonsCollections
     api project.deps.guava
