--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,6 +32,12 @@ description = 'GoCD Server'
 buildscript {
   repositories {
     mavenCentral()
+    maven {
+      url "https://oss.sonatype.org/content/repositories/snapshots/"
+      mavenContent {
+        snapshotsOnly()
+      }
+    }
   }
 
   dependencies {
