--- a/server/build.gradle
+++ b/server/build.gradle
@@ -790,7 +790,7 @@ task verifyWar(type: VerifyJarTask) {
         "aopalliance-1.0.jar",
         "aspectjweaver-${project.versions.aspectj}.jar",
         "base-${project.version}.jar",
-        "checker-qual-3.31.0.jar",
+        "checker-qual-${project.versions.checkerQual}.jar",
         "cloning-${project.versions.cloning}.jar",
         "commandline-${project.version}.jar",
         "common-${project.version}.jar",
