Remove unnecessary bouncyCastle dependencies
Also aim to make it clearer where things are used.

--- a/api/api-version-infos-v1/build.gradle
+++ b/api/api-version-infos-v1/build.gradle
@@ -21,6 +21,7 @@ plugins {
 dependencies {
   implementation project(':api:api-base')
   annotationProcessor project.deps.lombok
+  compileOnly project.deps.bouncyCastle
   
   testImplementation project(path: ':api:api-base', configuration: 'testOutput')
 
