Move logging test util specifically into test-utils

--- a/test/test-utils/build.gradle
+++ b/test/test-utils/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   implementation project(':base')
   api project(':util')
   api project.deps.springTest
+  api project.deps.logback
   implementation project.deps.jetty
   implementation project.deps.jettyPlus
   implementation project.deps.jettyJmx
