--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,7 @@ dependencies {
   api project.deps.servletApi
   api project.deps.gson
   implementation project.deps.cloning
+  testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
   testImplementation project.deps.junit5Params
