Remove unnecessary configurations
Try and make war file generation simply by removing the confusing "providedAtPackageTime" and "doNotPackage" configurations which are variation on compileOnly, and resolve the runtimeClasspath instead, the canonical way.

--- a/agent-process-launcher/build.gradle
+++ b/agent-process-launcher/build.gradle
@@ -18,6 +18,7 @@ description = 'GoCD Agent Process Launcher Classes'
 
 dependencies {
   implementation project(':agent-common')
+  compileOnly project.deps.logback
   testImplementation project.deps.mockitoCore
   testImplementation project(':test:test-utils')
   testRuntimeOnly project.deps.bouncyCastle
