--- a/agent-common/build.gradle
+++ b/agent-common/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
   api project(':base')
   api project.deps.jcommander
+  runtimeOnly project.deps.logback
 
   testRuntimeOnly project.deps.bouncyCastle
   testRuntimeOnly project.deps.bouncyCastlePkix
