Correct expected dependencies for activemq 5.18

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -799,8 +799,6 @@ task verifyWar(type: VerifyJarTask) {
         "error_prone_annotations-2.11.0.jar",
         "failureaccess-1.0.1.jar",
         "freemarker-${project.versions.freemarker}.jar",
-        "geronimo-j2ee-management_1.1_spec-1.0.1.jar",
-        "geronimo-jms_1.1_spec-1.1.1.jar",
         "go-plugin-access-${project.version}.jar",
         "go-plugin-activator-${project.version}.jar",
         "go-plugin-api-${project.version}.jar",
@@ -836,6 +834,7 @@ task verifyWar(type: VerifyJarTask) {
         "jaxen-${project.versions.jaxen}.jar",
         "jcl-over-slf4j-${project.versions.slf4j}.jar",
         "jdom2-${project.versions.jdom}.jar",
+        "jms-2.0.3.jar",
         "joda-time-${project.versions.jodaTime}.jar",
         "jolt-core-${project.versions.jolt}.jar",
         "jruby-complete-${project.versions.jruby}.jar",
