Correct expected JMS API dependency

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -834,7 +834,7 @@ task verifyWar(type: VerifyJarTask) {
         "jaxen-${project.versions.jaxen}.jar",
         "jcl-over-slf4j-${project.versions.slf4j}.jar",
         "jdom2-${project.versions.jdom}.jar",
-        "jms-2.0.3.jar",
+        "jms-api-2.0.3.jar",
         "joda-time-${project.versions.jodaTime}.jar",
         "jolt-core-${project.versions.jolt}.jar",
         "jruby-complete-${project.versions.jruby}.jar",
