Fix expected JMS API dependency

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -824,6 +824,7 @@ task verifyWar(type: VerifyJarTask) {
         "jackson-databind-${project.versions.jacksonBom}.jar",
         "jakarta.activation-api-2.1.1.jar",
         "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
+        "jakarta.jms-api-2.0.3.jar",
         "jakarta.mail-api-${project.versions.jakartaMail}.jar",
         "jakarta.servlet-api-${project.versions.servletApi}.jar",
         "jakarta.xml.bind-api-4.0.0.jar",
@@ -834,7 +835,6 @@ task verifyWar(type: VerifyJarTask) {
         "jaxen-${project.versions.jaxen}.jar",
         "jcl-over-slf4j-${project.versions.slf4j}.jar",
         "jdom2-${project.versions.jdom}.jar",
-        "jms-api-2.0.3.jar",
         "joda-time-${project.versions.jodaTime}.jar",
         "jolt-core-${project.versions.jolt}.jar",
         "jruby-complete-${project.versions.jruby}.jar",
