Rename npm project for clarity :-)

--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-rails-example",
+  "name": "gocd-server-ui",
   "version": "0.0.1",
   "license": "Apache-2.0",
   "scripts": {
