Update expected jars for new transitive

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -151,6 +151,7 @@ task verifyJar(type: VerifyJarTask) {
       "domain-${project.version}.jar",
       "error_prone_annotations-2.11.0.jar",
       "failureaccess-1.0.1.jar",
+      "fastdoubleparser-0.8.0.jar",
       "go-plugin-access-${project.version}.jar",
       "go-plugin-activator.jar",
       "go-plugin-api-${project.version}.jar",
