Try increasing JVM args

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ org.gradle.parallel=true
 org.gradle.workers.max=4
 org.gradle.caching=true
 org.gradle.java.installations.auto-download=false
+org.gradle.jvmargs=-Xmx784m -XX:MaxMetaspaceSize=512m
